--- a/static/assets/Yves/styleguide/assets/scss/components/organisms/navbar/_navbar.scss
+++ b/static/assets/Yves/styleguide/assets/scss/components/organisms/navbar/_navbar.scss
@@ -311,7 +311,7 @@
     }
 }
 
-@media (min-width: $_wLarge){
+@media (min-width: 850px){
     .navbar__top{
         .navbar__center{
             .navbar__item:last-child{
